--- a/.gitignore
+++ b/.gitignore
@@ -217,4 +217,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# PG Data
+postgres_data
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos
