--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch index.js",
     "start": "node index.js",
-    "lint": "eslint"
+    "lint": "eslint",
+    "migrations:generate": "sequelize-cli migration:generate --name",
+    "migrations:run": "sequelize-cli db:migrate",
+    "migrations:revert": "sequelize-cli db:migrate:undo",
+    "migrations:delete": "sequelize-cli db:migrate:undo:all",
+    "migrations:sqlsave": "sequelize-cli db:migrate > migrate.sql"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +22,16 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "sequelize-cli": "^6.6.1"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@hapi/boom": "^10.0.1",
+    "express": "^4.18.2",
+    "joi": "^17.10.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.33.0",
+    "tedious": "^16.4.1"
   }
 }
