--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,11 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=root
     ports:
       - 5050:80
+  sqlserver:
+    container_name: sql-server-db
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    ports:
+      - 1433:1433
+    environment:
+      - MSSQL_SA_PASSWORD=admin123
+      - ACCEPT_EULA=Y
