--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@hapi/boom": "^10.0.1",
     "express": "^4.18.2",
     "joi": "^17.10.2",
+    "mysql2": "^3.6.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
